# huey-books-backend

./: CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pgroles.yaml  pyproject.toml
.cloudbuild/: cloudbuild-feature-deployments.yaml  cloudbuild-main-branch.yaml
.cloudbuild/scripts/: pgroles-check.sh
.github/workflows/: alembic-migrations.yml  ci.yml  claude.yml  pr-cleanup.yml
alembic/: env.py
alembic/versions/: a1b2c3d4e5f6_add_recommendable_editions_mv.py  a1c0n7r1b8e1_add_stripe_contribution_receipts.py  a275e20b090c_add_generic_reviews_table_and_update_.py  b7e3f1a9c2d5_add_schools_name_trgm_index.py  c1a2m3p4a5n6_add_campaigns.py  c4e8a1f6d2b9_add_marketing_opt_out_to_users.py  d2a7c9b3e1f4_add_educator_label_origin.py  f8a1c2d3e4b5_add_labelset_reviews_and_school_count.py
app/: config.py  main.py
app/api/: booklists.py  broadcast.py  campaigns.py  chat.py  collections.py  commerce.py  editions.py  educator_broadcast.py  external_api_router.py  kpis.py  labelset.py  onboarding.py  recommendations.py  reviews.py  schools.py  users.py  works.py
app/api/internal/: __init__.py
app/db/: extensions.py  functions.py  views.py
app/models/: __init__.py  campaign.py  labelset.py  labelset_review.py  review.py  school.py  stripe_contribution.py  user.py  work_collection_frequency.py
app/repositories/: chat_repository.py  labelset_repository.py  review_repository.py  school_repository.py
app/schemas/: broadcast.py  campaign.py  cms.py  educator_broadcast.py  kpis.py  labelling.py  recommendations.py  review.py  sendgrid.py
app/services/: account_refs.py  action_processor.py  background_events.py  broadcast.py  campaigns.py  cel_evaluator.py  chat_runtime.py  collections.py  commerce.py  educator_broadcast.py  email_notification.py  email_templates.py  event_listener.py  internal_api_handlers.py  node_input_validation.py  onboarding_service.py  recommendations.py  school_billing.py  school_emails.py  stripe_events.py
app/services/labelling/: __init__.py  prompt.py  providers.py
app/tests/integration/: conftest.py  test_api.py  test_api_cms_content.py  test_api_cms_flows.py  test_blockbuster_validation.py  test_booklist_api.py  test_broadcast.py  test_campaigns.py  test_chat_api.py  test_chat_api_error_handling.py  test_cms.py  test_cms_authentication.py  test_cms_content.py  test_cms_error_handling.py  test_cms_integration_workflows.py  test_cms_themes_api.py  test_commerce_api.py  test_educator_broadcast.py  test_kpis.py  test_onboarding.py  test_recommendable_editions_mv.py  test_recommendation_greenlet.py  test_review_queue.py  test_school_activation.py  test_school_contribution.py  test_school_search_ranking.py  test_school_staff.py  test_slack_notification_integration.py  test_stripe_welcome_email_migration.py  test_user_api.py
app/tests/unit/: test_action_processor.py  test_background_task_sessions.py  test_cel_aggregation.py  test_configuration.py  test_email_notification_service.py  test_event_listener_amplification.py  test_internal_family_onboarding.py  test_labelset_origin_weights.py  test_mv_refresh_enqueue.py  test_node_input_validation.py  test_resend_email.py  test_school_signup.py
docker/: init-roles.sql
docs/: ADR.md  architecture-roadmap.md  architecture-service-layer.md  chatflow-node-types.md  design-chatflow-segments.md  node-schemas-reference.md  school-self-serve-signup.md  stripe.md
scripts/: deploy_huey_flow.py  gpt_labeller.py  integration-tests.sh  llm_langchain_labeling.py  load_jokes.py  load_spelling.py  run-migrations.sh  seed_admin_ui_data.py  start-tests.sh  stripe_migrate.py  test_huey_flow_e2e.py
scripts/fixtures/: admin-ui-seed.json  family-onboarding-flow.json  huey-bookbot-flow.json  huey-jokes-flow.json  huey-preferences-flow.json  huey-profile-flow.json  huey-recommendation-flow.json  huey-spelling-flow.json
