[project]
name = "wriveted-api"
version = "0.4.1"
description = "Wriveted helps children find books they will love to read"
authors = [
    { name = "Brian Thorne", email = "brian@wriveted.com" },
    { name = "Joshua Landy", email = "joshua@wriveted.com" },
]
requires-python = ">=3.11,<3.14"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.41,<0.42",
    "alembic>=1.11,<2",
    "structlog>=24.1,<26",
    "psycopg2-binary>=2.9.6,<3",
    "SQLAlchemy>=2.0,<3",
    "httpx>=0.28,<0.29",
    "fastapi-cloudauth>=0.4.3,<0.5",
    "cryptography>=46.0.7,<49.0.0",
    "pydantic[email]>=2.7,<3",
    "fastapi_permissions>=0.2.7,<0.3",
    "gunicorn>=23.0,<24",
    "tenacity>=9.0,<10",
    "sendgrid>=6.10,<7",
    "mock>=5.0.1,<6",
    "webencodings>=0.5.1,<0.6",
    "google-cloud-tasks>=2.10.4,<3",
    "setuptools>=75.6,<81",
    "humanize>=4.4.0,<5",
    "google-cloud-storage>=2.6.0,<3",
    "pillow>=12.2,<13",
    "stripe>=14.4,<15",
    "slack-sdk>=3.19.5,<4",
    "alembic-utils>=0.8.1,<0.9",
    "phonenumbers>=8.13.6,<9",
    "twilio>=9.0,<10",
    "xmltodict>=0.13.0,<0.14",
    "isbnlib>=3.10.13,<4",
    "openai>=1.58,<2",
    "google-genai>=1.0,<2",
    "google-api-python-client>=2.191,<3",
    "beautifulsoup4>=4.12.2,<5",
    "pydantic-settings>=2.0.3,<3",
    "python-jose[cryptography]>=3.3.0,<4",
    "asyncpg>=0.31,<0.32",
    "opentelemetry-api>=1.29,<2",
    "opentelemetry-sdk>=1.29,<2",
    "opentelemetry-exporter-gcp-trace>=1.6.0,<2",
    "opentelemetry-instrumentation-httpx>=0.50b0,<0.51",
    "opentelemetry-instrumentation-fastapi>=0.50b0,<0.51",
    "opentelemetry-instrumentation-sqlalchemy>=0.50b0,<0.51",
    "opentelemetry-instrumentation-vertexai>=0.48,<0.49",
    "opentelemetry-propagator-gcp>=1.6.0,<2",
    "opentelemetry-instrumentation-asyncpg>=0.50b0,<0.51",
    "opentelemetry-instrumentation-psycopg2>=0.50b0,<0.51",
    "common-expression-language>=0.5.0,<0.6",
    "bleach>=6.2.0,<7",
]

[dependency-groups]
dev = [
    "pytest>=8,<9",
    "pytest-cov>=7.0.0,<8",
    "google-api-python-client>=2.191,<3",
    "google-auth-httplib2>=0.2,<0.3",
    "google-auth-oauthlib>=1.0,<2",
    "pre-commit>=4.0,<5",
    "locust>=2.32,<3",
    "rich>=13.3.2,<14",
    "more-itertools>=10.2.0,<11",
    "pytest-asyncio>=1.3.0,<2",
    "pytest-timeout>=2.3.1,<3",
    "ruff>=0.4.10,<1.0",
    "mypy>=1.16.0,<2",
    "types-setuptools>=80.9.0.20250529,<81",
    "psutil>=6.0,<7",
]

[tool.uv]
# The app runs from source on PYTHONPATH (see Dockerfile), not installed as a
# package, so uv manages only the dependency venv — no build backend/step.
package = false

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
asyncio_mode = "auto"
timeout = 300
cache_dir = "/tmp/pytest_cache"
addopts = [
    "--strict-markers",
    "--tb=short"
]
filterwarnings = [
    "ignore:.*FieldValidationInfo.*:DeprecationWarning",
    "ignore:.*CRUDCollection is deprecated.*:DeprecationWarning",
    "ignore:.*CRUDEvent is deprecated.*:DeprecationWarning",
    "ignore:.*pydantic.error_wrappers.*:UserWarning",
    "ignore::pydantic.warnings.PydanticDeprecatedSince20",
    "ignore:.*Pydantic serializer warnings.*:UserWarning",
    "ignore:.*Duplicate Operation ID.*:UserWarning",
    "ignore:.*You should not use the 'timeout' argument with the TestClient.*:DeprecationWarning",
    "ignore:.*conflicts with persistent instance.*:sqlalchemy.exc.SAWarning",
    "ignore:.*incompatible polymorphic identity.*:sqlalchemy.exc.SAWarning",
    "ignore:.*expected to delete .* rows.*:sqlalchemy.exc.SAWarning",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "unit: marks tests as unit tests",
    "integration: marks tests as integration tests"
]

[tool.ruff]

line-length = 88
target-version = "py311"
exclude = [
    "examples",
    "scripts",
    "tests",
]

[tool.ruff.lint]

# Enable the pycodestyle (`E`) and Pyflakes (`F`) rules by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E", "F"]
ignore = ["E501"]

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
"app/**/__init__.py" = ["F401"]
"alembic/env.py" = ["E402"]
